# fll-unearthed

code/: battery.py  celebrate.py  cleanwheels.py  crosssover.py  heavylifting.py  hello.py  liftthedoor.py  main_program.py  mapreveal.py  mbBoatFlag.py  mbJehu.py  mbJehuNew.py  mbMapreveal.py  mbMinecartnew.py  mbMission6And7.py  mbStatue.py  mbminecart.py  mbsurfacebrushing.py  mbwheelthing.py  menu.py  program1.py  program2.py  pyproject.toml  robot.py  roofraising.py  straightdemo.py
code/marcus/: battery.py  buttons.py  celebrate.py  cleanwheels.py  images.py  menu.py  straightdemo.py
